# sweeper

./: .gitignore  .hlint.yaml  README.md  package.yaml  stack.yaml  sweeper-ai.cabal
src/: CheaterPlayer.hs  Cli.hs  CmdArgs.hs  Colors.hs  Config.hs  Draw.hs  DummyPlayer.hs  Game.hs  GameRunner.hs  Main.hs  Mode.hs  Play.hs  PlayStats.hs  Player.hs  PlayerAPI.hs  Rand.hs  Stats.hs  UI.hs
src/Cli/: Config.hs  Helpers.hs  Mode.hs  Read.hs
src/Cli/Mode/: Bench.hs  Common.hs  Type.hs  UI.hs
src/CmdArgs/: Helpers.hs  Read.hs
src/Mode/: Bench.hs  Common.hs  Type.hs  UI.hs
src/Mode/UI/: Colors.hs  Draw.hs  UI.hs
src/Player/: API.hs  Backtracking.hs  CSP.hs  Cheater.hs  Constraints.hs  Dummy.hs  SinglePoint.hs  Smart.hs
src/Player/Constraints/: Cells.hs
src/Player/Smart/: Cells.hs
src/UI/: Color.hs  Colors.hs  Draw.hs  UI.hs
src/Utils/: Chan.hs  Random.hs
