name:                sweeper-ai
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Aliaksey Artamonau
maintainer:          aliaksiej.artamonau@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable sweeper-ai
  main-is:             Main.hs
  other-modules:       CmdArgs
                       Game
                       Mode.Bench
                       Mode.Common
                       Mode.UI
                       Mode.UI.Colors
                       Mode.UI.Draw
                       Mode.UI.UI
                       Play
                       Player
                       Player.API
                       Player.Constraints
                       Player.Constraints.Cells
                       Player.Dummy
                       Player.SinglePoint
                       PlayStats
                       Rand
  build-depends:       base >= 4.8 && < 4.9,
                       array >= 0.5 && < 0.6,
                       random >= 1.1 && < 1.2,
                       text >= 1.1 && < 1.3,
                       blank-canvas == 0.6,
                       colour >= 2.2 && < 3.0,
                       transformers >= 0.3 && < 0.5,
                       free >= 4.12 && < 4.13,
                       containers >= 0.5 && < 0.6,
                       split >= 0.2 && < 0.3,
                       optparse-applicative >= 0.12 && < 0.13,
                       async >= 2.0 && < 2.2,
                       vector >= 0.11 && < 0.12,
                       mwc-random >= 0.13 && < 0.14,
                       mwc-random-monad >= 0.7 && < 0.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-options:         -threaded -Wall -O2 -rtsopts -fno-warn-name-shadowing
  GHC-prof-options:    -fprof-auto -O2 -rtsopts
