name:                sweeper-ai
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Aliaksey Artamonau
maintainer:          aliaksiej.artamonau@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable sweeper-ai
  main-is:             Main.hs
  other-modules:       Cli
                       Cli.Helpers
                       Cli.Read
                       Config
                       Game
                       Mode
                       Mode.Bench
                       Mode.Common
                       Mode.Type
                       Mode.UI
                       Play
                       Player
                       Player.API
                       Player.Dummy
                       Player.SinglePoint
                       PlayStats
                       Rand
                       UI.Colors
                       UI.Draw
                       UI.UI
  build-depends:       base,
                       array,
                       random,
                       text,
                       blank-canvas,
                       colour,
                       transformers,
                       free,
                       containers,
                       split,
                       optparse-applicative,
                       async,
                       vector,
                       mwc-random,
                       mwc-random-monad
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-options:         -threaded -Wall -O2 -rtsopts -fno-warn-name-shadowing
  GHC-prof-options:    -fprof-auto -O2 -rtsopts
  default-extensions:  NamedFieldPuns
                       DuplicateRecordFields
