name:                sweeper-ai
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Aliaksey Artamonau
maintainer:          aliaksiej.artamonau@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable sweeper-ai
  main-is:             Main.hs
  other-modules:       Cli
                       Cli.Config
                       Cli.Helpers
                       Cli.Mode
                       Cli.Mode.Bench
                       Cli.Mode.Common
                       Cli.Mode.Type
                       Cli.Mode.UI
                       Cli.Read
                       Game
                       GameRunner
                       Player
                       Player.Backtracking
                       Player.CSP
                       Player.Dummy
                       Player.SinglePoint
                       Stats
                       UI.Color
                       UI.Draw
                       UI.UI
                       Utils.Chan
                       Utils.Random
  build-depends:       base,
                       array,
                       random,
                       text,
                       blank-canvas,
                       colour,
                       mtl,
                       containers,
                       optparse-applicative,
                       async,
                       MonadRandom,
                       open-browser,
                       extra,
                       stm,
                       stm-delay,
                       ascii-progress
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-options:         -threaded -Wall -O2 -fno-warn-name-shadowing
                       -rtsopts -with-rtsopts=-N
  GHC-prof-options:    -fprof-auto
  default-extensions:  ApplicativeDo
                       BangPatterns
                       DuplicateRecordFields
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NumDecimals
                       OverloadedStrings
                       Rank2Types
                       StandaloneDeriving
                       TupleSections
